--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,9 @@
 {
-  "name"        : "semantic",
-  "description" : "Semantic empowers designers and developers by creating a shared vocabulary for UI.",
-  "homepage"    : "http://www.semantic-ui.com",
+  "name"        : "vanilla-semantic-ui",
+  "description" : "Semantic UI without jQuery.",
+  "homepage"    : "https://github.com/morganbarrett/Vanilla-Semantic-UI/",
   "author": {
-    "name" : "Jack Lukic",
-    "web"  : "http://www.jacklukic.com"
+    "name" : "Morgan Barrett"
   },
   "dependencies": {
     "jquery"      : ">=1.8"
@@ -14,6 +13,7 @@
     "dist/semantic.js"
   ],
   "keywords": [
+    "vanilla"
     "semantic",
     "ui",
     "css3",
