--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "semantic-ui",
-  "version": "2.3.1",
-  "title": "Semantic UI",
-  "description": "Semantic empowers designers and developers by creating a shared vocabulary for UI.",
-  "homepage": "http://www.semantic-ui.com",
-  "author": "Jack Lukic <jack@semantic-ui.com>",
+  "name": "vanilla-semantic-ui",
+  "version": "0.0.1",
+  "title": "Vanilla Semantic UI",
+  "description": "Semantic UI without jQuery.",
+  "homepage": "https://github.com/morganbarrett/Vanilla-Semantic-UI/",
+  "author": "Morgan Barrett <morganbarrett@icloud.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/Semantic-Org/Semantic-UI.git"
+    "url": "https://github.com/morganbarrett/Vanilla-Semantic-UI.git"
   },
   "bugs": {
-    "url": "https://github.com/Semantic-Org/Semantic-UI/issues"
+    "url": "https://github.com/morganbarrett/Vanilla-Semantic-UI//issues"
   },
   "scripts": {
     "install": "gulp install"
